fix: sonar cloud issues